--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,12 @@ security:
             security: false
         main:
             lazy: true
+            provider: app_user_provider
+
+            form_login:
+                login_path: app_login
+                check_path: app_login
+#                enable_csrf: true
 #            provider: users_in_memory
 
             # activate different ways to authenticate
@@ -26,7 +32,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
