--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
-#                enable_csrf: true
+                enable_csrf: true
 #            provider: users_in_memory
 
             # activate different ways to authenticate
