--- a/.env
+++ b/.env
@@ -16,7 +16,9 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=6403b7297b59b7eb06c45de330842279
+#APP_SECRET=6403b7297b59b7eb06c45de330842279
+#APP_ENV=prod
+#APP_DEBUG=0
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
