--- a/.env
+++ b/.env
@@ -31,6 +31,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://enigmeAdmin:admin@localhost:3306/enigmeSymfony?serverVersion=5.7"
+#DATABASE_URL="mysql://bourgeault3:ThéoLavauzelle2003@bourgeault3.hosting.unilim.fr:80"
+
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
