--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,9 @@ security:
                 login_path: app_login
                 check_path: app_login
                 enable_csrf: true
+                default_target_path: app_home
+                always_use_default_target_path: true
+
 #            provider: users_in_memory
 
             # activate different ways to authenticate
